objects/Presales_Enhancement_Ticket__c.object
<CustomObject>
    <description>Presales Enhancement Tickets</description>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <inlineHelpText>To add additional comments once the enhancement ticket has been created.</inlineHelpText>
        <label>Additional Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Presales_Number__r.Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Size__c</fullName>
        <label>Deal Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enhancement_In__c</fullName>
        <label>Enhancement In</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enhancement_Logged__c</fullName>
        <label>Enhancement Logged</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Description__c</fullName>
        <label>Feature Request Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Label_Names__c</fullName>
        <label>Label Names</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presales_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presales Number</label>
        <referenceTo>Presales__c</referenceTo>
        <relationshipLabel>Presales Enhancement Tickets</relationshipLabel>
        <relationshipName>Presales_Enhancement_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presales_Stage__c</fullName>
        <formula>TEXT(Presales_Number__r.Current_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presales Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Priority of the Enhancement Ticket.</inlineHelpText>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Instance__c</fullName>
        <label>Product Instance</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Reporter__c</fullName>
        <formula>Presales_Number__r.Solutions_Architect__r.FirstName + &apos; &apos; +  Presales_Number__r.Solutions_Architect__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Reporter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Status__c</fullName>
        <label>Ticket Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Do</fullName>
                    <default>true</default>
                    <label>To Do</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Presales Enhancement Ticket</label>
    <nameField>
        <displayFormat>PE-{000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales Enhancement Tickets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>